fixed vertical social logos on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -30,8 +30,7 @@
     grid-template-columns: 1fr;
     gap: 3.2rem;
   }
-  .footer--additional__info,
-  .socials {
+  .footer--additional__info{
     flex-direction: column;
     gap: 3.2rem;
   }
